--- a/trabalho_final/atv.tex
+++ b/trabalho_final/atv.tex
@@ -600,7 +600,7 @@ No experimento podemos perceber que a camada mais próxima dos outputs (hidden l
 
 Como consequência dessa diferença nas velocidades de aprendizado entre cada camada, não há a exploração ampla de todas as possibilidades no espaço de pesos possíveis. Em particular, os pesos pertencentes à camadas mais próximas dos inputs não são explorados com tanta ênfase quanto as últimas camadas. Esse problema se pronuncia consideravelmente para redes neurais com muitas camadas escondidas - usualmente chamadas de redes neurais profundas (\textit{deep neural networks}).
 
-Com o passar dos anos, pesquisadores apresentaram técnicas para contornar esse e outros problemas no treinamento de redes profundas desse tipo. Nesse contexto, o Deep Learning pode ser estudado como um conjunto de técnicas para melhorar o treinamento dessas redes profundas. No próximo capitulo indicaremos duas das principais técnicas já consolidadas nesse meio.
+Com o passar dos anos, pesquisadores apresentaram técnicas para contornar esse e outros problemas no treinamento de redes profundas desse tipo. Nesse contexto, o Deep Learning pode ser estudado como um conjunto de técnicas para melhorar o treinamento dessas redes profundas. Nas próximas seções indicaremos duas das principais técnicas já consolidadas nesse meio.
 
 \section{Regularização}
 Introduz um termo extra $C_r$ na função de perda original, penalizando convergências inadequadas no treinamento.
