--- a/trabalho_final/tarefa6_latex.tex
+++ b/trabalho_final/tarefa6_latex.tex
@@ -222,6 +222,9 @@ Com todas as camadas descritas, pode-se entender finalmente como funcionaria uma
 \bibitem{ref3} J. Johnson et al \textit{CS231n: Convolutional Neural Networks for Visual Recognition}, Lecture Notes \url{http://cs231n.stanford.edu/}.
 \bibitem{ref4} Investments in Image Recognition \textit{Index}, \url{https://index.co/market/image-recognition/investments}.
 
+Improving neural networks by preventing
+co-adaptation of feature detectors
+
 \end{thebibliography}
 
 
