--- a/trabalho_final/atv.tex
+++ b/trabalho_final/atv.tex
@@ -618,7 +618,7 @@ Considere a seguinte figura, onde os pontos representam dados pertencentes à du
 	\includegraphics[scale=0.8]{regL2.png}
 \end{center}
 
- Para $\lambda$ pequeno, equivalente a situação sem regularização, podemos perceber que o treinamento converge para uma classificação perfeita. Entretanto, tal fronteira de separação das classes é abrupta, característico de situações de overfitting. Ao aumentar $\lambda$, os pesos da rede ficam menores e consequentemente os neurônios ficam em regiões mais lineares.
+ Para $\lambda$ pequeno, equivalente a situação sem regularização, podemos perceber que o treinamento converge para uma classificação perfeita. Entretanto, tal fronteira de separação das classes é abrupta, característico de situações de overfitting. Ao aumentar $\lambda$, os pesos da rede ficam menores e consequentemente os neurônios ficam em regiões mais lineares, evitando overfitting \cite{regularization}.
 
 \section{Dropout}
 
