--- a/trabalho_final/atv.tex
+++ b/trabalho_final/atv.tex
@@ -1169,7 +1169,7 @@ Simon Haykin - \emph{Neural Networks and Learning Machines}, Pearson Education I
 \bibitem{ref3} J. Johnson et al \textit{CS231n: Convolutional Neural Networks for Visual Recognition}, Lecture Notes \url{http://cs231n.stanford.edu/}.
 \bibitem{ref4} Investments in Image Recognition \textit{Index}, \url{https://index.co/market/image-recognition/investments}.
 \bibitem{dropout} G.E. Hinton et al, \textit{Improving neural networks by preventing co-adaptation of feature detectors}, 2012.
-\bibitem{regularization} A. Krogh, \textit{A Simple Weight Decay Can Improve Generalization}
+\bibitem{regularization} Anders Krogh e John A. Hertz, \textit{A Simple Weight Decay Can Improve Generalization}
 
 \end{thebibliography}
 
